@startuml


ProviderEntity --> Report
Report -->"*" Ranking



class ProviderEntity {
    +String name
    +Set<Entity> entities
    +List<Report> historicReports
    -Report weeklyReport

   + addReportToRecord(Report)
   + getWeeklyReport()
}


abstract class Ranking {
    +getName() : String
    +getDataFromRanking() : List<Entity>
    +generate(List<Entity>)
}

class EntitiesAverageCloseTime implements Ranking {
    +String name
    +List<Entity> sortedEntities

    +getName() : String
    +getDataFromRanking() : List<Entity>
    +generate(List<Entity>)

}

class EntitiesReportedIncidents implements Ranking{
    +String name
    +List<Entity> sortedEntities

    +getName() : String
    +getDataFromRanking() : List<Entity>
    +generate(List<Entity>)
    -filteredIncidentsFromEntity(Entity) : List<Incident>
    -existsAnotherIncidentAtSameProvisionOfService(List<Incident>,Incident) : Boolean
}

class EntitiesImpactDegree implements Ranking{
    +String name
    +List<Entity> sortedEntities

     +getName() : String
     +getDataFromRanking() : List<Entity>
     +generate(List<Entity>)
}


class Report implements Exportable {
    -String name
    -List<Raking> rankingsToInclude
    -LocalDateTime processingDate
    -Map<String,List<String>> reportData

    +reportData() : Map<String,List<String>>
    +addRanking(Ranking ranking)
    +generateReport(List<Entity>)
    -generateRankings(List<Entity>)
}



' -------abajo extrategia modulo exportador:---------

ExportToPDF --> AdapterExporterToPDF
Exporter --> ExporterStrategy
Exporter --> Exportable

class Exporter {
    documentoAExportar : Exportable
    estrategia : ExporterStrategy
    cambiarEstrategia(ExporterStrategy)
}

interface Exportable {
    reportData() : Map<String,List<String>>
}

interface ExporterStrategy {
     export(Exportable) : String
}

class ExportToPDF implements  ExporterStrategy {

    adapter: AdapterPDFExporter
    export(Exportable) : String
}

interface AdapterExporterToPDF {
export(Exportable) : String
}

class AdapterApachePDFBox implements AdapterExporterToPDF{
    export(Exportable) : String
}

@enduml

